# AceReStreamer

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE.md  README.md  README_XC_api.md  README_dev.md  README_dev_setup.md  TODO.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.claude/plans/: quality-cache-culling.md
.github/: dependabot.yml
.github/workflows/: check.yml  check_types.yml  ghcr.yml  test.yml
acere/: __init__.py  constants.py  crud.py  main.py  models.py  version.py
acere/api/: deps.py  main.py
acere/api/routes/: ace_pool.py  config.py  epg.py  health.py  hls.py  login.py  private.py  scraper.py  streams.py  users.py  xc.py
acere/api/routes_frontend/: __init__.py  frontend.py  generated_frontend_paths.json
acere/api/routes_media/: __init__.py  epg.py  iptv.py  stream.py
acere/cli/config/: __init__.py  __main__.py
acere/cli/db_migrate/: __main__.py
acere/cli/debug_epg_now_playing/: __main__.py
acere/cli/debug_get_xc_server_response/: __main__.py
acere/cli/debug_iptv_scraper/: __init__.py  __main__.py
acere/cli/epg_now_playing/: __main__.py
acere/cli/get_xc_server_response/: __main__.py
acere/cli/password_reset/: __main__.py
acere/cli/scraper/: __init__.py  __main__.py  constants.py  playlist.py  readme.py  repo.py
acere/config/: __init__.py  migrate.py
acere/config/ace/: __init__.py  scraper.py
acere/config/iptv/: __init__.py
acere/core/: config.py  db.py  security.py  stream_token.py
acere/core/config/: __init__.py  app.py  epg.py  scraper.py
acere/database/: init.py  main.py  types.py
acere/database/handlers/: __init__.py  acestreams.py  base.py  category_xc.py  content_id_infohash.py  content_id_xc_id.py  iptv_streams.py  quality_cache.py  xc_stream_map.py
acere/database/migration/: env.py  runner.py  script.py.mako
acere/database/models/: __init__.py  acestream.py  category_xc.py  content_id_infohash.py  content_id_xc_id.py  iptv_stream.py  quality_cache.py  user.py  xc_stream_map.py
acere/instances/: __init__.py  ace_manager.py  ace_pool.py  ace_quality.py  ace_streams.py  config.py  epg.py  iptv_proxy.py  iptv_streams.py  paths.py  quality.py  remote_settings.py  scraper.py  xc_category.py  xc_stream.py  xc_stream_map.py
acere/services/ace/: __init__.py  manager.py
acere/services/ace_pool/: __init__.py  entry.py  models.py  pool.py
acere/services/ace_quality/: __init__.py
acere/utils/: ace.py  api_models.py  auth.py  authentication_status.py  cli.py  constants.py  exception_handling.py  health.py  helpers.py  hls.py  logger.py  m3u8.py  m3u8_fetch_cache.py
acerestreamer/: __init__.py  __main__.py  _obj_instances.py  ace_pool.py  ace_pool_api_bp.py  api_bp.py  authentication_allow_list.py  authentication_bp.py  authentication_helpers.py  config.py  config_cli.py  constants.py  epg.py  epg_bp.py  flask_helpers.py  health_api_bp.py  helpers.py  html_snippets.py  info_bp.py  instances.py  instances_mapping.py  iptv_bp.py  logger.py  scraper.py  scraper_api_bp.py  scraper_cache.py  scraper_health.py  scraper_helpers.py  scraper_html.py  scraper_iptv.py  scraper_m3u_name_replacer.py  scraper_objects.py  static_bp.py  stream_api_bp.py  stream_bp.py  stream_helpers.py  version.py
acerestreamer/blueprints/: __init__.py
acerestreamer/config/: __init__.py  cli.py  models.py
acerestreamer/services/: __init__.py
acerestreamer/static/: 401.html  404.html  acestreamwebplayer.js  apiplayground.js  login.html  login.js  zy.css
acerestreamer/templates/: 403.html.j2  home.html.j2  stream.html.j2
acerestreamer/utils/: __init__.py  canned_responses.py  constants.py  content_id_infohash_mapping.py  flask_helpers.py  helpers.py  hls.py  html_snippets.py  logger.py  m3u.py  xc.py
acestreamwebplayer/: __init__.py  __main__.py  authentication_allow_list.py  authentication_bp.py  authentication_helpers.py  blueprint_one.py  blueprint_one_object.py  config.py  config_cli.py  html_snippets.py  info_bp.py  logger.py  scraper.py  scraper_health.py  scraper_helpers.py  scraper_html.py  scraper_iptv.py  scraper_objects.py  stream_bp.py
acestreamwebplayer/static/: acestreamwebplayer.js  zy.css
acestreamwebplayer/templates/: 403.html.j2  guide.html.j2  home.html.j2  nginx_complete.conf.j2  nginx_site.conf.j2  stream.html.j2
docker/: Dockerfile.backend  Dockerfile.combined  Dockerfile.frontend
docs/: acestream-http-proxy.md  conf.py  configuration.md  development.md  index.md  running.md  tools.md
docs/_ext/: README.md  generate_json_examples.py  generate_txt_examples.py
docs/cli/: password-reset.md  scraper.md
docs/deployment/: docker.md  non-docker.md
docs/development/: backend.md  docker.md  frontend.md
docs/materials/: xc_api.md
frontend/: .gitignore  CLAUDE.md  biome.json  docker-compose.playwright.yml  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/scripts/: generate_frontend_route_list.ts
frontend/src/: helpers.ts  main.tsx  routeTree.gen.ts  theme.tsx  utils.ts  vite-env.d.ts
frontend/tests/: auth.setup.ts  config.ts  login.spec.ts  sign-up.spec.ts  user-settings.spec.ts
scripts/: download_test_epgs.sh  generate-client.sh  npm-post-install.sh  run-ci-local.sh  run-playwright.sh  run-test-webservers.sh
tests/: conftest.py  test__meta.py  test__no_pollution.py  test_blueprint_one.py  test_config.py  test_home.py  test_logger.py  test_logger_unit.py  test_meta.py
tests/acere_utils/: test_cli.py  test_helpers.py  test_hls.py  test_logger.py
tests/configs/: bp_one_different_my_message.json  config_app_message_invalid.json  config_app_message_invalid.toml  logging_invalid.json  logging_invalid_log_level.json  test_valid.json  testing_false_valid.json  testing_true_valid.json  testing_true_valid.toml
tests/crud/: test_user.py
tests/database/: test_acestreams_handler.py  test_content_id_xc_id_handler.py  test_main.py  test_migration.py  test_quality_cache.py  test_quality_cache_check_missing.py
tests/test_utils/: ace.py  aiohttp.py  epg.py  hls.py  user.py  user_utils.py
tests/utils/: user.py  utils.py
(+295 files in other folders)
