[project]
name = "acere"
version = "1.1.1b4"
description = ""
requires-python = ">=3.14,<4.0"
dependencies = [
    # From Template
    "fastapi[standard-no-fastapi-cloud-cli]>=0.118.0",
    "sqlmodel<1.0.0,>=0.0.25",
    "pydantic>=2.11",
    "pydantic-settings>=2.11",
    "pyjwt<3.0.0,>=2.10.1",
    "uvicorn>=0.37.0",
    # Me
    "beautifulsoup4>=4.14.2",
    "jinja2>=3.1.6",
    "lxml>=6.0.2",
    "psutil>=7.1.0",
    "pytz>=2025.2",
    "aiohttp[speedups]>=3.13.0", # Requires python 3.14+ for zstd support
    "rich>=14.1.0",
    "argon2-cffi>=25.1.0",
    "uvloop>=0.22.1",
    "starlette-compress>=1.6.1",
]

[project.optional-dependencies]
type = [
    "mypy",
    "ty",
    "types-passlib>=1.7.7",
    "lxml-stubs>=0.5.1",
    "types-psutil>=7.0.0.20250601",
    "types-pytz>=2025.2.0.20250516",
]
lint = ["ruff", "memray"]
test = [
    "pytest >=9.0",
    "pytest-cov",
    "pytest-mock",
    "pytest-random-order",
    "detect-test-pollution",
    "pytest-asyncio",
    "pytest-socket>=0.7.0",
]
docs = ["sphinx", "myst-parser", "sphinx-rtd-theme"]


[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["acere"]
module-root = ""

[project.scripts]
acerestreamer-scrape = "acere.cli.scraper:__main__.main"
acerestreamer-password-reset = "acere.cli.password_reset:__main__.main"

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # From the template
    "B904", # Allow raising exceptions without from e, for HTTPException

    # Specific rules
    "TD002",  # Verbose TODO, only I work on this project
    "TD003",  # Verbose TODO, only I work on this project
    "ISC001", # conflict in the formatter
    "COM812", # conflict in the formatter
    "D103",   # Missing docstring in public function
    "N805",   # field_validator needs cls
    "TRY400", # Fine to log exceptions as errors
    "SIM117", # Double 'with' is more readable with async
    "D1",     # Not going to document everything, we have good type checking
    "TC001",  # Breaks Pydantic completely
    # "ERA001", # WIP Commented Out Code
    # "FIX",    # WIP FIXME
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "ARG",     # KG Unused function args -> fixtures nevertheless are functionally relevant
    "S101",    # Allow use of assert in tests
    "E402",    # I do some dumb imports in tests
    "TRY",     # Exceptions in tests are allowed to be messy
    "D1",      # Not going to document everything, we have good type checking
    "S",       # No real crypto in tests
    "SLF001",  # Can access private members in tests
    "PLR2004", # Allow magic comparisons in tests
    "ANN401",  # *args: Any, **kwargs: Any in tests
    "EM101",   # Raise whatever in tests
]
"docs/*.py" = [
    # Modules
    "INP",
    "D",
    "A",
]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "pydantic_settings.BaseSettings",
    "sqlmodel.SQLModel",
    "uuid.UUID",
    "acere.api.deps.SessionDep",
    "acere.services.ace_quality.Quality",
    "acere.services.scraper.models.FoundAceStreamAPI",
    "acere.services.scraper.models.AceScraperSourceApi",
    "acere.services.epg.models.EPGApiHandlerHealthResponse",
] # These aren't for type checking only

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 40


[tool.coverage.run]
command_line = ".venv/bin/pytest"
source = ["acere"]
context = "test"


[tool.coverage.report]
show_missing = false
format = "text"
sort = "-Miss"

[tool.coverage.html]
show_contexts = true

[tool.pytest.ini_options]
addopts = [
    "--disable-socket",
    "--allow-hosts=127.0.0.1,127.0.1.1",
    "--asyncio-mode=auto",
]


[tool.mypy]
strict = true
files = ["acere", "tests"]
exclude = ["venv", ".venv"]
show_error_codes = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
    "type-arg",
    "unused-awaitable",
    "possibly-undefined",
    "redundant-self",
]
disable_error_code = [
    "prop-decorator", # Conflicts with pydantic computed_field
]
[[tool.mypy.overrides]]
module = "acere.database.models.user"
disable_error_code = [
    "override",   # SqlModel handles the None
    "assignment", # Classmethod is fine
]
[[tool.mypy.overrides]]
module = "tests.core.config.test_ace_scrape_conf"
disable_error_code = [
    "arg-type", # Pydantic needs to process and correct incorrect urls
]

[[tool.ty.overrides]]
# Not sure what ty is upset about here
include = ["acere/main.py", "tests/core/config/test_ace_scrape_conf.py"]
[tool.ty.overrides.rules]
"invalid-argument-type" = "ignore"
